<resources>
    <string name="app_name">CalcForGrid</string>
    <string name="point">.</string>
    <string name="c">C</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="deduct">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="result">=</string>
    <string name="exeptAction">Что-то не то вы нажали, сударь</string>
    <string name="exeptInResult">Тут что-то нехорошее</string>
    <string name="exeptOperation">А чего мы, собственно, хотим? Вводи операцию правильно</string>
    <string name="act">action</string>
    <string name="calcText">calcText</string>
    <string name="num1">number1</string>
    <string name="num2">number2</string>
    <string name="forNum">forNumbers</string>
    <string name="infinityNotAction">С бесконечностью ничего не сделаешь</string>
</resources>
