<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_height="140dp"
        android:id="@+id/text"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:gravity="center|end"
        android:text="Hello World!"
        android:textSize="30sp" />

    <Button
        android:text="@string/point"
        android:tag="."/>

    <Button
        android:layout_columnSpan="2"
        android:text="@string/c"
        android:tag="c"
        android:layout_gravity="fill"/>

    <Button
        android:text="@string/divide"
        android:tag="/"/>

    <Button
        android:text="@string/_7"
        android:tag="7"/>

    <Button
        android:text="@string/_8"
        android:tag="8"/>

    <Button
        android:text="@string/_9"
        android:tag="9"/>

    <Button
        android:text="@string/multiply"
        android:tag="*"/>

    <Button
        android:text="@string/_4"
        android:tag="4"/>

    <Button
        android:text="@string/_5"
        android:tag="5"/>

    <Button
        android:text="@string/_6"
        android:tag="6"/>

    <Button
        android:text="@string/deduct"
        android:tag="-"/>

    <Button
        android:text="@string/_1"
        android:tag="1"/>

    <Button
        android:text="@string/_2"
        android:tag="2"/>

    <Button
        android:text="@string/_3"
        android:tag="3"/>

    <Button
        android:text="@string/add"
        android:tag="+"/>

    <Button
        android:text="@string/_0"
        android:tag="0"/>

    <Button
        android:layout_columnSpan="3"
        android:layout_gravity="fill"
        android:text="@string/result"
        android:tag="="/>

</GridLayout>
